simple fixes